--- a/ui/src/components/workspace/styles/prosemirror.css
+++ b/ui/src/components/workspace/styles/prosemirror.css
@@ -7,11 +7,13 @@
   max-width: calc(var(--document-width) + calc(2 * var(--document-margin)));
   border-radius: calc(var(--document-margin) / var(--ratio) / var(--ratio))
     calc(var(--document-margin) / var(--ratio) / var(--ratio)) 0 0;
-  min-height: calc(100% - var(--document-margin));
-  margin: var(--document-margin) auto 0;
+  min-height: calc(100% - 2 * var(--document-margin));
+  margin: calc(var(--document-margin) * 2) auto 0;
   box-shadow: 0 0px 16px -8px var(--border-color);
   animation: fade-in ease-out 200ms;
   word-break: break-word;
+  z-index: 1;
+  position: relative;
 }
 
 @keyframes fade-in {
