--- a/ui/src/components/document/styles/styles.css
+++ b/ui/src/components/document/styles/styles.css
@@ -31,7 +31,7 @@
   --root-size: var(---root-size, 1em);
   --ratio: var(---ratio, 1.2599);
   --document-width: var(---document-width, 60ch);
-  --document-margin: var(---document-margin, 4ch);
+  --document-margin: var(---document-margin, 4rem);
   --body-font-family: var(---body-font-family, --rlm-font, sans-serif);
   --heading-font-family: var(---heading-font-family, --rlm-font, serif);
   --heading-weight: var(---heading-weight, 800);
