added dock route logic & resizing

--- a/ui/src/assets/styles.css
+++ b/ui/src/assets/styles.css
@@ -26,6 +26,10 @@
   border-right: 1px solid;
 }
 
+.dock-label {
+  @apply flex-1 py-2 overflow-hidden whitespace-nowrap overflow-ellipsis;
+}
+
 /* Icons */
 .icon {
   @apply p-1 rounded-1;
