--- a/ui/src/assets/styles.css
+++ b/ui/src/assets/styles.css
@@ -11,6 +11,7 @@
 
 .clickable {
   @apply cursor-pointer;
+  transition: background-color 80ms ease;
 }
 
 .clickable:hover {
@@ -19,11 +20,13 @@
 
 .dock-grip {
   @apply mx-2 border-border;
+  opacity: 1;
   border-color: theme(colors.border);
   cursor: col-resize;
   width: 4px;
   border-left: 1px solid;
   border-right: 1px solid;
+  transition: opacity 200ms ease;
 }
 
 .dock-label {
