--- a/ui/src/assets/styles.css
+++ b/ui/src/assets/styles.css
@@ -10,6 +10,11 @@
   font-variant: small-caps;
 }
 
+.azimuth {
+  @apply px-2 rounded-1 bg-border font-azimuth;
+  line-height: 1.12em;
+}
+
 .clickable {
   @apply cursor-pointer;
   transition: background-color 80ms ease;
