--- a/ui/src/assets/styles.css
+++ b/ui/src/assets/styles.css
@@ -5,9 +5,14 @@
 
 /* UI */ 
 
-.heading {
-  @apply font-bold text-base text-heading;
-  font-variant: small-caps;
+.heading-1 {
+  @apply font-medium text-type text-heading;
+  line-height: 1em;
+}
+
+.heading-2 {
+  @apply font-medium text-icon text-heading;
+  line-height: 1em;
 }
 
 .azimuth {
@@ -24,14 +29,35 @@
   @apply bg-border;
 }
 
+.input {
+  @apply px-4 py-3 flex justify-between items-center rounded-2 border-;
+  border-color: theme(colors.border);
+}
+
+.input input {
+  @apply outline-none text-sm bg-none min-w-0 flex-1;
+}
+
+.input .unit {
+  @apply text-icon;
+}
+
+.input::placeholder {
+  @apply text-icon;
+}
+
 .dock-grip {
-  @apply mx-2 border-border;
-  opacity: 1;
+  @apply mx-2;
+  opacity: 0;
   cursor: col-resize;
   width: 4px;
-  border-left: 1px solid theme(colors.icon);
-  border-right: 1px solid theme(colors.icon);
-  transition: opacity 200ms ease;
+  border-left: 1px solid theme(colors.border);
+  border-right: 1px solid theme(colors.border);
+  transition: opacity 80ms ease;
+}
+
+.dock-grip:hover {
+  opacity: 1;
 }
 
 .dock-label {
