--- a/ui/src/components/document/styles/prosemirror.css
+++ b/ui/src/components/document/styles/prosemirror.css
@@ -1,5 +1,5 @@
 .ProseMirror {
-  @apply bg-paper flex-grow;
+  @apply flex-grow;
   /* box-shadow: 0 0px 32px -16px var(--rlm-text-color, #261f1f); */
   outline-style: none;
   white-space: normal;
@@ -10,14 +10,9 @@
   /* border-radius: calc(var(--document-margin) / var(--ratio) / var(--ratio))
     calc(var(--document-margin) / var(--ratio) / var(--ratio)) 0 0; */
   /* min-height: calc(100% - 2 * var(--document-margin)); */
-  border-width: 1px 1px 0px 1px;
-  border-style: solid;
-  border-color: theme(colors.border);
-  border-radius: 16px 16px 0px 0px;
-  margin: calc(var(--document-margin) * 2) 0 0;
+  /* margin: calc(var(--document-margin) * 2) 0 0; */
   animation: fade-in ease-out 200ms;
   word-break: break-word;
-  z-index: 1;
   position: relative;
 }
 
