polished up document, toolbar, & cover

--- a/ui/src/components/document/styles/document.css
+++ b/ui/src/components/document/styles/document.css
@@ -6,10 +6,12 @@
 }
 
 /* Element Styles */
+/*
 .ProseMirror > * {
-  padding-left: calc(var(--document-margin) / var(--ratio));
+  /padding-left: calc(var(--document-margin) / var(--ratio));
   padding-right: calc(var(--document-margin) / var(--ratio));
 }
+*/
 
 p,
 h1,
