--- a/ui/src/components/document/styles/prosemirror.css
+++ b/ui/src/components/document/styles/prosemirror.css
@@ -5,16 +5,25 @@
   white-space: normal;
   line-height: var(--leading-body);
   font-size: var(--body);
-  max-width: 100%;
-  width: calc(var(--document-width) + calc(2 * var(--document-margin)));
-  padding: 0 16px 0 72px;
-  /* border-radius: calc(var(--document-margin) / var(--ratio) / var(--ratio))
-    calc(var(--document-margin) / var(--ratio) / var(--ratio)) 0 0; */
-  /* min-height: calc(100% - 2 * var(--document-margin)); */
-  /* margin: calc(var(--document-margin) * 2) 0 0; */
+  /* max-width: 100%; */
   animation: fade-in ease-out 200ms;
   word-break: break-word;
   position: relative;
+  align-self: stretch;
+  left: 50%;
+  transform: translate(-50%);
+}
+
+.ProseMirror {
+  padding: 0 280px 0 72px;
+  max-width: calc(calc(280px + 72px) + calc(var(--document-width) + calc(2 * var(--document-margin))));
+}
+
+@media (max-width: 800px) {
+  .ProseMirror {
+    padding: 0 16px 0 72px;
+    max-width: calc(calc(16px + 72px) + calc(var(--document-width) + calc(2 * var(--document-margin))));
+  }
 }
 
 @keyframes fade-in {
