--- a/ui/src/components/document/styles/prosemirror.css
+++ b/ui/src/components/document/styles/prosemirror.css
@@ -1,22 +1,23 @@
 .ProseMirror {
-  @apply flex-grow;
+  @apply flex-grow bg-paper;
   /* box-shadow: 0 0px 32px -16px var(--rlm-text-color, #261f1f); */
   outline-style: none;
   white-space: normal;
   line-height: var(--leading-body);
   font-size: var(--body);
-  /* max-width: 100%; */
+  border-width: 1px 1px 0px 1px;
+  border-style: solid;
+  border-color: theme(colors.border);
+  border-radius: 16px 16px 0px 0px;
   animation: fade-in ease-out 200ms;
   word-break: break-word;
   position: relative;
   align-self: stretch;
   left: 50%;
   transform: translate(-50%);
-}
-
-.ProseMirror {
   padding: 0 280px 0 72px;
-  max-width: calc(calc(280px + 72px) + calc(var(--document-width) + calc(2 * var(--document-margin))));
+  max-width: 100%;
+  width: calc(calc(280px + 72px) + calc(var(--document-width) + calc(2 * var(--document-margin))));
 }
 
 @media (max-width: 800px) {
