--- a/ui/src/components/document/styles/document.css
+++ b/ui/src/components/document/styles/document.css
@@ -198,6 +198,7 @@ aside {
   position: relative;
   font-weight: normal;
   font-style: normal;
+  color: var(--type-color);
   text-decoration: none;
   float: right;
   width: 0;
