--- a/ui/src/components/document/styles/document.css
+++ b/ui/src/components/document/styles/document.css
@@ -49,6 +49,7 @@ header {
 }
 header h1 {
   margin: 0;
+  font-weight: 600;
 }
 
 header p {
@@ -131,6 +132,7 @@ li {
 
 li ol:nth-child(2),
 ul:nth-child(2) {
+  margin-top: var(--margin-after);
   margin-bottom: var(--margin-after);
 }
 
