some more misc ui polishing

--- a/ui/src/assets/styles.css
+++ b/ui/src/assets/styles.css
@@ -101,7 +101,7 @@
   width: 8px;
 }
 .scrollbar-small::-webkit-scrollbar-track {
-  @apply rounded-3 bg-border;
+  @apply rounded-3 bg-none;
 }
 .scrollbar-small::-webkit-scrollbar-thumb {
   @apply rounded-3 bg-type;
